base/observability/manifests/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - grafana.mgmt.hosterei.ch
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: grafana.mgmt.hosterei.ch-tls
    - hosts:
        - grafana.mgmt.hosterei.ch
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
spec:
  hosts:
  - grafana.mgmt.hosterei.ch
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        host: kube-prom-grafana.observability.svc.cluster.local
        port:
          number: 80
