base/observability/manifests/networking.yaml
# Force mTLS in the namespace.
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT
---
# Allow Prometheus to access the API server for service discovery.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-server
spec:
  host: kubernetes.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
  exportTo: [ . ]
